@@ -66,6 +66,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       iteration. TRQ-1251.
   b - Fix a deadlock when recording an alps reservation on the server side. Cray only. 
       TRQ-1272.
+  c - Fix mismanagement of the ji_globid. TRQ-1262.
 
 4.1.2
   e - Add the ability to run a single job partially on CRAY hardware and partially
